--- a/dvc.yaml
+++ b/dvc.yaml
@@ -2,7 +2,7 @@
 
 stages:
   prepare_data:
-    cmd: python src/stage_01_prepare.py
+    cmd: python src/stage_01_prepare.py --config=configs/config.yaml --params=params.yaml
     deps:
       - src/stage_01_prepare.py
       - data/data.xml
@@ -15,3 +15,19 @@ stages:
     outs:
       - artifacts/prepared/test.tsv
       - artifacts/prepared/train.tsv
+
+  featurize:
+    cmd: python src/stage_02_featurization.py --config=configs/config.yaml --params=params.yaml
+    deps:
+      - src/stage_02_featurization.py 
+      - artifacts/prepared/test.tsv
+      - artifacts/prepared/train.tsv
+      - src/utils/common.py
+      - src/utils/featurize.py
+      - configs/config.yaml
+    params:
+      - featurize.max_features
+      - featurize.ngrams
+    outs:
+      - artifacts/features/train.pkl
+      - artifacts/features/test.pkl
