--- a/dvc.yaml
+++ b/dvc.yaml
@@ -45,3 +45,27 @@ stages:
       - train.min_split
     outs:
       - artifacts/model/model.pkl
+
+  evaluate:
+    cmd: python src/stage_04_evaluate.py --config=configs/config.yaml --params=params.yaml
+    deps:
+      - src/stage_04_evaluate.py 
+      - artifacts/features/test.pkl
+      - src/utils/common.py
+      - configs/config.yaml
+      - artifacts/model/model.pkl
+    metrics:
+      - scores.json:
+          cache: False
+    plots:
+      - prc.json:
+          cache: False
+          x: recall
+          y: precision
+      - roc.json:
+          cache: False
+          x: fpr
+          y: tpr
+
+  run_plots_command:
+    cmd: dvc plots diff
